--- a/Dossier de codage/style.css
+++ b/Dossier de codage/style.css
@@ -1,171 +1,435 @@
- body { 
-    margin: 0;
-    padding: 0;
-    font-family: verdana;
-    background-image: url(Image/background.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: scroll;
-    background-size: cover;
+*{
+  box-sizing: border-box;
 }
 
-header {
-    background-color: hsl(180, 1%, 81%);
-    padding: 15px;
-    position: sticky;
-    top: 0px;
-    border-bottom: solid hsl(240, 1%, 30%);
-}
+ body {
+     margin: 0;
+     padding: 0;
+     font-family: verdana;
+     background-color: black;
+     background-image: url(Image/background.jpg);
+     background-repeat: no-repeat;
+     background-position: center;
+     background-attachment: scroll;
+     background-size: cover;
+
+ }
+
+ .wrapper{
+    width: 90%;
+    max-width: 1536px;
+    margin-inline: auto;
+    position: relative;
+    height: 100px;
+    margin-top: 5rem;
+    overflow: hidden;
+    mask-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0),
+        rgba(0, 0, 0, 1) 20%,
+        rgba(0, 0, 0, 1) 80%,
+        rgba(0, 0, 0, 0)
+        
+        
+        
+        
+        );
+ }
+
+ .item {
+    width: 200px;
+    height: 100px;
+    background-color: red;
+    border-radius: 6px;
+    position: absolute;
+    left: max(calc(200px * 8), 100%);
+    animation-name:scrollLeft  ;
+    animation-duration: 30s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+ }
+
+
+ .item1 {
+    animation-delay: calc(30s / 8 * (8 - 1) * -1);
+ }
+
+ .item2 {
+    animation-delay: calc(30s / 8 * (8 - 2) * -1) ;
+ }
+
+ .item3 {
+    animation-delay: calc(30s / 8 * (8 - 3) * -1) ;
+ }
+
+ .item4 {
+    animation-delay: calc(30s / 8 * (8 - 4) * -1) ;
+ }
+
+ .item5 {
+    animation-delay: calc(30s / 8 * (8 - 5) * -1) ;
+ }
+
+ .item6 {
+    animation-delay: calc(30s / 8 * (8 - 6) * -1) ;
+ }
+
+.item7 {
+    animation-delay: calc(30s / 8 * (8 - 7) * -1) ;
+ }
+
+ .item8 {
+    animation-delay: calc(30s / 8 * (8 - 8) * -1) ;
+ }
+
+
+ @keyframes scrollLeft {
+    to{
+     left: -200px;   
+    }
+ }
 
 
 
-h1 {
+ header {
+     background-color: hsl(180, 1%, 81%);
+     padding: 15px;
+     position: sticky;
+     top: 0px;
+     border-bottom: solid hsl(240, 1%, 30%);
+     text-align: center;
+ }
+
+
+
+ h1 {
+     text-align: center;
+     margin-top: 0%;
+ }
+
+ h1::selection {
+     color: blue;
+     background-color: hsl(0, 0%, 17%);
+
+ }
+
+ .he1{
+     font-size: 17px;
+     background-color: blueviolet;
+     color: hsl(113, 92%, 64%);
+     border-radius: 10px;
+     border: solid hsl(113, 92%, 64%);
+     margin: 10px;
+     transition: transform 0.3s,background-color 0.3s;
+ }
+
+ .he1:hover {
+    transform: translateY(-10px);
+     font-size: 1.3em;
+     color: yellow;
+     background-color: black;
+     border: outset hsl(0, 4%, 95%);
+    
+ }
+
+ #test {
+    transition: transform 0.3s;
+ }
+
+ #counter{
+    font-size: 9em;
+    display: block;
     text-align: center;
-    margin-top: 0%;
+    font-family: Helvetica;
 }
-
-h1::selection {
-color: blue;
-background-color: hsl(0, 0%, 17%);
-
-}
-
-.he1 {
-    font-size: 17px;
-    background-color:blueviolet;
-    color: hsl(113, 92%, 64%);
-    border-radius: 10px;
-    border: solid hsl(113, 92%, 64%);
-    margin: 10px;
-
-}
-
-.he1:hover{
-    font-size: 1.3em;
-    color: yellow;
-    background-color: black;
-    border: outset hsl(0, 4%, 95%);
-}
-
-
-h2 {
-    color: black;
-    text-shadow: 3px 3px 5px blueviolet, -3px -3px 5px hsl(113, 92%, 64%);
-    text-align: center;
-}
-
-h2::before{
- content: "🐦";
- font-size: 1.2em;
-}
-
-#A1 {
-    border-style: outset;
-    border-width: 3px;
-    border-color: hsla(240, 90%, 49%, 0.986);
-    border-radius: 10px;
-}
-
-.divside {
+iframe{
     margin: auto;
-    display: flex;
-    max-width: 800px;
-    padding: 10px;
-
+    margin-top: 5em;
+    margin-bottom: 5em;   
+    border: 5px solid red;
+    display: block;
 }
-
-a {
-    text-decoration: none;
-}
-
-#img1 {
-    width: 100%;
-}
-
-#img1:hover{
-    border-color: hsl(0, 92%, 48%);
-}
-
-#img2 {
-    width: 50%;
-}
-
-
-footer {
-    margin-left: 10px;
-    
-}
-
-#img3 {
-    width: 150%;
-}
-
-#img4 {
-    width: 50%;
-}
-
-#text4 {
-    width: 50%;
- 
-}
-
-
-
-.textpool {
-    color: hsl(0, 0%, 100%);
-    font-family: cursive;
-    font-size: 1.3em;
-    
-}
-
-.textpool::selection{
-background-color: aqua;
-color: hsl(308, 100%, 54%);
-}
-
-footer {
-    background-color: hsl(180, 1%, 81%);
-    margin: 0;
+#btnContainer{
     text-align: center;
 }
-
-#email:link{
-color: hsl(313, 100%, 50%);
-
-}
-
-#email:hover{
-    font-size: 2em;
-}
-
-img{
-    border-radius: 10px;
-    border: solid black;
-    margin-left: 50px;
-}
-
-.page{
-    text-align: center;
-    
-}
-
-.page a{
-    text-decoration: none;
-    padding: 8px 15px;
-    display: inline-block;
+.btn{
+    padding: 10px 20px;
+    font-size: 1.5em;
     color: hsl(0, 0%, 100%);
-    
-}
-
-.page a.active{
-    background-color: blue;
-    font-weight: bold;
-}
-
-.page a:hover:not(:active){
-    background-color: black;
+    background-color: hsl(251, 100%, 55%);
     border-radius: 5px;
-    color:chartreuse
+    cursor: pointer;
+    transition: background-color 0.25s;
 }
 
+.btn:hover{
+    background-color :hsl(251, 100%, 45%);
+}
 
+ h2 {
+     color: black;
+     text-shadow: 3px 3px 5px blueviolet, -3px -3px 5px hsl(113, 92%, 64%);
+     text-align: center;
+     animation-name: grow;
+     animation-duration: 2s;
+ }
+
+ h2::before {
+     content: "🐦";
+     font-size: 1.2em;
+ }
+
+ #A1 {
+     border-style: outset;
+     border-width: 3px;
+     border-color: hsla(240, 90%, 49%, 0.986);
+     border-radius: 10px;
+ }
+
+ .divside {
+     display: flex;
+     justify-content: space-evenly;
+     margin: auto;
+     max-width: 800px;
+
+
+ }
+
+
+ a {
+     text-decoration: none;
+ }
+
+ #img1 {
+     width: 400px;
+     margin-right: 30px;
+     height: 350px;
+     animation-name: rotate;
+     animation-duration: 2s;
+
+
+ }
+
+ i {
+     color: hsl(0, 0%, 0%);
+
+ }
+
+ i:hover {
+     color: hsl(0, 92%, 65%);
+ }
+
+ #text1 {
+     font-size: 1.1em;
+     padding-top: 0%;
+     min-width: 300px;
+ }
+
+ #img1:hover {
+     border-color: hsl(0, 92%, 48%);
+ }
+
+ #img2 {
+     height: 400px;
+     width: 400px;
+     margin-right: 30px;
+     animation-name: rotate;
+     animation-duration: 2s;
+ }
+
+ #text2 {
+     padding-top: 0%;
+     min-width: 300px;
+ }
+
+
+ footer {
+     margin-left: 10px;
+
+ }
+
+ #img3 {
+     width: 500px;
+     animation-name: rotate;
+     animation-duration: 2s;
+ }
+
+ #img4 {
+     width: 400px;
+     margin-right: 50px;
+     animation-name: rotate;
+     animation-duration: 2s;
+ }
+
+
+
+
+
+ .textpool {
+     color: hsl(0, 0%, 100%);
+     font-family: cursive;
+     font-size: 1.2em;
+     padding: 50px;
+     margin: 0%;
+     text-align: center;
+     max-height: 400px;
+     animation-name: slideLeft;
+     animation-duration: 2s;
+
+
+ }
+
+ .textpool::selection {
+     background-color: aqua;
+     color: hsl(308, 100%, 54%);
+ }
+
+ footer {
+     background-color: hsl(180, 1%, 81%);
+     margin: 0;
+     text-align: center;
+ }
+
+ #email:link {
+     color: hsl(313, 100%, 50%);
+
+ }
+
+ input{
+    background-color: hsl(236, 100%, 53%);
+
+ }
+
+ #email:hover {
+     font-size: 2em;
+ }
+
+ img {
+     border-radius: 10px;
+     border: solid black;
+     margin-left: 50px;
+ }
+
+ .page {
+     text-align: center;
+    margin-top: 70px;
+ }
+
+ .page a {
+     text-decoration: none;
+     padding: 8px 15px;
+     display: inline-block;
+     color: hsl(0, 0%, 0%);
+
+ }
+
+ .page a.active {
+     background-color: blue;
+     font-weight: bold;
+     border-radius: 5px;
+ }
+
+ #text3 {
+     padding-top: 0px;
+     min-width: 300px;
+     font-size: 1.4em;
+ }
+
+
+ .page a:hover:not(:active) {
+     background-color: black;
+     border-radius: 5px;
+     color: chartreuse
+ }
+
+ @media screen and (max-width:600px) {
+     #img1 #img2 #img3 #img4 {
+         width: 100%;
+     }
+ }
+
+ #box {
+     width: 250px;
+     height: 250px;
+     font-size: 13em;
+     border: 5px solid;
+     text-align: center;
+     background-color: hsl(240, 64%, 63%);
+
+     animation-name: rotate;
+     animation-duration: 2s;
+
+
+ }
+
+ #img1:hover {
+     animation-name: glow;
+     animation-duration: 2s;
+ }
+
+ #img2:hover {
+     animation-name: glow;
+     animation-duration: 2s;
+ }
+
+ #img3:hover {
+     animation-name: glow;
+     animation-duration: 2s;
+ }
+
+ #img4:hover {
+     animation-name: glow;
+     animation-duration: 2s;
+ }
+
+ @keyframes slideLeft {
+     from {
+         transform: translateX(600%);
+     }
+ }
+
+ @keyframes slideRight {
+     to {
+         transform: translateX(600%);
+     }
+ }
+
+ @keyframes slideUp {
+     from {
+         transform: translateY(600%);
+     }
+ }
+
+ @keyframes rotate {
+     100% {
+         transform: rotateZ(360deg);
+     }
+ }
+
+ @keyframes grow {
+     50% {
+         transform: scale(300%);
+     }
+ }
+
+ @keyframes color {
+     50% {
+         background-color: blue;
+     }
+ }
+
+ @keyframes glow {
+     50% {
+         box-shadow: 0px 0px 50px hsl(125, 100%, 32%)
+     }
+
+ }
+
+ article{
+  width: clamp(200px, 50%,600px);
+ }
+
+ video{
+    width: 100%;
+    aspect-ratio: 16/9;
+ }
